# HEL-X-Guard

./: .gitignore  KURULUM.md  YAPI.md  docker-compose.prod.yml  yapı2.md
firmware-scanner/: .env.example  Dockerfile  Dockerfile.api  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements.txt
firmware-scanner/api/: __init__.py  audit.py  auth.py  celery_app.py  config.py  database.py  main.py  models.py  pdf_report.py  runner.py  schemas.py  storage.py  tasks.py
firmware-scanner/api/routers/: audit.py  auth.py  firmware.py  rules.py  scans.py
firmware-scanner/api/templates/: report.html
firmware-scanner/migrations/: env.py
firmware-scanner/migrations/versions/: 0001_initial_schema.py  0002_tier2_analysis.py  0003_yara_rules_table.py  0004_device_label.py
firmware-scanner/rules/: compliance_map.json  cve_db.json  firmware_rules.yar
firmware-scanner/src/firmware_scanner/: arch_detect.py  binwalk_runner.py  call_graph.py  cert_extract.py  checksec.py  cli.py  compliance.py  components.py  crypto_constants.py  crypto_keys.py  cve_match.py  disasm_stats.py  elf_analysis.py  entropy.py  firmware_loader.py  ghidra_runner.py  hashing.py  peripheral_map.py  report.py  risk_scoring.py  rootfs_analysis.py  sandbox.py  string_xref.py  strings_scan.py  (+1 more)
firmware-scanner/tests/: conftest.py  test_arch_detect.py  test_binwalk_runner.py  test_call_graph.py  test_checksec.py  test_compliance.py  test_components.py  test_crypto_constants.py  test_crypto_keys.py  test_disasm_stats.py  test_elf_analysis.py  test_entropy.py  test_entropy_regions.py  test_firmware_loader.py  test_firmware_regression.py  test_ghidra_runner.py  test_hashing.py  test_multi_arch_disasm.py  test_pdf_report.py  test_peripheral_map.py  test_report.py  test_risk_scoring.py  test_rootfs_analysis.py  test_sandbox.py  test_string_xref.py  test_strings_scan.py  test_yara_rules_api.py  test_yara_runner.py
(+22 files in other folders)
